frontend/test/should_pass/index_model_003.gm
node class N
{
	i:int;
}

edge class E;

index foo { countIncident(Node) }
index bar { countIncoming(Node) }
index baz { countOutgoing(Node) }

index foo2 { countIncident(N) }
index bar2 { countIncoming(N) }
index baz2 { countOutgoing(N) }

index foo3 { countIncident(N, E) }
index bar3 { countIncoming(N, E) }
index baz3 { countOutgoing(N, E) }

index foo4 { countIncident(N, E, N) }
index bar4 { countIncoming(N, E, N) }
index baz4 { countOutgoing(N, E, N) }

index foo5 { countIncident(Node, Edge, Node) }
index bar5 { countIncoming(Node, Edge, Node) }
index baz5 { countOutgoing(Node, Edge, Node) }
