frontend/test/should_fail/index_min_max_size_model.gm
enum ENU
{
	foo,
	bar,
	baz,
	qux
}

node class N
{
	i : int;
	d : double;
	b : boolean;
	s : string;
	e : ENU;
}

edge class E
{
	i : int;
	d : double;
	b : boolean;
	s : string;
	e : ENU;
}

index fooi { N.i }
index bari { E.i }

index ic { countIncident(N) }
